fix: show header anchor links on focus (fixes #151)wq dquote> dquote> Generate header anchor links during build process dquote> Handle header anchor link visibility with CSS dquote> Give header anchor links an accessible label

--- a/src/static/css/infusion-docs.css
+++ b/src/static/css/infusion-docs.css
@@ -166,7 +166,7 @@ a:focus {
 /* Styling for the hover links on headings */
 
 .infusion-docs .infusion-docs-anchor {
-    display: inline-block;
+    display: hidden;
     margin-left: -2rem;
     padding-right: 4px;
 }
@@ -174,10 +174,16 @@ a:focus {
 .infusion-docs-anchor .octicon-link {
     color: #000;
     vertical-align: middle;
+    visibility: hidden;
 }
 
 .infusion-docs-container a.infusion-docs-anchor:hover {
     background: inherit;
+}
+
+.infusion-docs-anchor:hover .octicon-link,
+.infusion-docs-anchor:focus .octicon-link {
+    visibility: visible;
 }
 
 .infusion-docs-anchor span {
